welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:9: error: not found: value num
      max2=num(i+1)
           ^